releases/armi/v0.4.0/_sources/gallery/framework/run_grids1_hex.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/framework/run_grids1_hex.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_framework_run_grids1_hex.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_framework_run_grids1_hex.py:


Make a hex grid.
================

This uses a grid factory method to build an infinite 2-D grid of hexagons with pitch
equal to 1.0 cm.

Learn more about :py:mod:`grids <armi.reactor.grids>`.

.. GENERATED FROM PYTHON SOURCE LINES 23-59



.. image-sg:: /gallery/framework/images/sphx_glr_run_grids1_hex_001.png
   :alt: (i, j) indices for a hex grid
   :srcset: /gallery/framework/images/sphx_glr_run_grids1_hex_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import math

    import matplotlib.pyplot as plt
    import matplotlib.patches as mpatches
    from matplotlib.collections import PatchCollection

    from armi.reactor import grids
    from armi import configure

    configure(permissive=True)

    hexes = grids.HexGrid.fromPitch(1.0)

    polys = []
    fig, ax = plt.subplots()
    ax.set_aspect("equal")
    ax.set_axis_off()

    for hex_i in hexes.generateSortedHexLocationList(127):
        x, y, z = hex_i.getGlobalCoordinates()
        ax.text(x, y, f"{hex_i.i},{hex_i.j}", ha="center", va="center", fontsize=8)
        polys.append(
            mpatches.RegularPolygon(
                (x, y), numVertices=6, radius=1 / math.sqrt(3), orientation=math.pi / 2
            )
        )
    patches = PatchCollection(polys, fc="white", ec="k")
    ax.add_collection(patches)

    # create a bounding box around patches with a small margin (2%)
    bbox = patches.get_datalim(ax.transData)
    bbox = bbox.expanded(1.02, 1.02)
    ax.set_xlim(bbox.xmin, bbox.xmax)
    ax.set_ylim(bbox.ymin, bbox.ymax)
    ax.set_title("(i, j) indices for a hex grid")
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.173 seconds)


.. _sphx_glr_download_gallery_framework_run_grids1_hex.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: run_grids1_hex.py <run_grids1_hex.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: run_grids1_hex.ipynb <run_grids1_hex.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
